fix alignment of OSD and OCP logos on /create page
this was working in local environment, but not in prod. I suspect
the chrome.css is different. This adds an override / hack to make
it work in both environments.

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -505,7 +505,7 @@ h4.pf-c-alert__title {
   filter: grayscale(0);
 }
 
-.create-cluster-header.pf-c-card__header {
+.infra-card .create-cluster-header.pf-c-card__header {
   margin-top: 55px;
   padding-top: 0;
 }
